--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,react,macos,windows,linux
+
+# project specific
+build/
