--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches:
       - main
-    workflow_dispatch:
+  workflow_dispatch:
 
 permissions:
   contents: write
@@ -14,6 +14,7 @@ permissions:
 
 jobs:
   deploy:
+    if: github.repository == 'li-dao/wiki'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -29,12 +30,20 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Set Environment Variables
+        run: |
+          echo "GOOGLE_ANALYTICS_ID=${{ secrets.GOOGLE_ANALYTICS_ID }}" >> $GITHUB_ENV
+          echo "GOOGLE_TAG_MANAGER_ID=${{ secrets.GOOGLE_TAG_MANAGER_ID }}" >> $GITHUB_ENV
+
       - name: Build
+        env:
+          GOOGLE_ANALYTICS_ID: ${{ secrets.GOOGLE_TAG_ID }}
+          GOOGLE_TAG_MANAGER_ID: ${{ secrets.GOOGLE_TAG_MANAGER_ID }}
         run: bun run build
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
         if: github.ref == 'refs/heads/main'
         with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./build  # default: public
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build # default: public
