--- a/.github/workflows/deploy-github-pages.yml
+++ b/.github/workflows/deploy-github-pages.yml
@@ -30,14 +30,9 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Set Environment Variables
-        run: |
-          echo "GOOGLE_ANALYTICS_ID=${{ secrets.GOOGLE_ANALYTICS_ID }}" >> $GITHUB_ENV
-          echo "GOOGLE_TAG_MANAGER_ID=${{ secrets.GOOGLE_TAG_MANAGER_ID }}" >> $GITHUB_ENV
-
       - name: Build
         env:
-          GOOGLE_ANALYTICS_ID: ${{ secrets.GOOGLE_TAG_ID }}
+          GOOGLE_ANALYTICS_ID: ${{ secrets.GOOGLE_ANALYTICS_ID }}
           GOOGLE_TAG_MANAGER_ID: ${{ secrets.GOOGLE_TAG_MANAGER_ID }}
         run: bun run build
 
