--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@docusaurus/core": "3.6.3",
     "@docusaurus/plugin-content-docs": "^3.6.3",
+    "@docusaurus/plugin-content-pages": "^3.6.3",
     "@docusaurus/plugin-debug": "^3.6.3",
     "@docusaurus/plugin-google-gtag": "^3.6.3",
     "@docusaurus/plugin-google-tag-manager": "^3.6.3",
@@ -34,6 +35,8 @@
     "@docusaurus/theme-mermaid": "^3.6.3",
     "@docusaurus/theme-search-algolia": "^3.6.3",
     "@easyops-cn/docusaurus-search-local": "^0.46.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
     "lunr-languages": "^1.14.0",
