chore: update funding configuration to use array format for custom URL
Signed-off-by: rrrro <really.need.anonymous@proton.me>

--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,3 @@
 # These are supported funding model platforms
 
-github: [li-dao]
-custom: [https://x.com/Li_memecoin]
+custom: ["https://x.com/Li_memecoin"]
